MDEV-13649: Server crashes in set_field_to_null_with_conversions or in Field::set_notnull

Item_cond did not correctly propagate with_window_func flag in the Item
tree. Without it, we would not call Item::split_sum_func correctly and the
window function's result_field would remain NULL.